fix(monitoring): Update code and environment based on PR comments